Webdev-ppage-updated

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -829,7 +829,7 @@ footer{
 			top: 100%;
 			right: 80px;
 			z-index: 0;
-			background-image: url(/dist/img/juventus-desktop-home.png);
+			background-image: url("/dist/img/slingshot-desktop.png");
 			@media screen and (min-width: 768px) {
 				top: 30%;
 				right: 20%;
@@ -841,7 +841,7 @@ footer{
 			width: 50%;
 			rotate: 5deg;
 			z-index: 1;
-			background-image: url(/dist/img/juventus-mobile-turquoise.png);
+			background-image: url("/dist/img/slingshot-mobile.png");
 			@media screen and (min-width: 768px) {
 				width: 25%;
 				height: 500px;
@@ -852,7 +852,7 @@ footer{
 			top: 100%;
 			right: 80px;
 			z-index: 0;
-			background-image: url(/dist/img/truly-dekstop-home.png);
+			background-image: url("/dist/img/bdr-desktop.png");
 			@media screen and (min-width: 768px) {
 				top: 30%;
 				right: 20%;
@@ -864,7 +864,7 @@ footer{
 			right: 20px;
 			width: 50%;
 			rotate: 5deg;
-			background-image: url(/dist/img/truly-mobile-about.png);
+			background-image: url("/dist/img/bdr-mobile.png");
 			@media screen and (min-width: 768px) {
 				width: 25%;
 				height: 500px;
@@ -912,7 +912,7 @@ footer{
 			top: 100%;
 			right: 80px;
 			z-index: 0;
-			background-image: url("/dist/img/pokebowl-desktop.jpg");
+			background-image: url("/dist/img/1ffc-desktop.png");
 			@media screen and (min-width: 768px) {
 				top: 30%;
 				right: 20%;
@@ -924,7 +924,7 @@ footer{
 			right: 20px;
 			width: 50%;
 			rotate: 5deg;
-			background-image: url("/dist/img/pokebowl-mobile.jpg");
+			background-image: url("/dist/img/1ffc-mobile.png");
 			@media screen and (min-width: 768px) {
 				width: 25%;
 				height: 500px;
@@ -981,7 +981,7 @@ footer{
 			top: 100%;
 			right: 80px;
 			z-index: 0;
-			background-image: url("/dist/img/trivia-desktop.jpg");
+			background-image: url("/dist/img/nclp-desktop.png");
 			@media screen and (min-width: 768px) {
 				top: 30%;
 				right: 20%;
@@ -993,7 +993,7 @@ footer{
 			right: 20px;
 			width: 50%;
 			rotate: 5deg;
-			background-image: url("/dist/img/trivia-mobile.jpg");
+			background-image: url("/dist/img/nclp-mobile.png");
 			@media screen and (min-width: 768px) {
 				width: 25%;
 				height: 500px;
@@ -1004,7 +1004,7 @@ footer{
 			top: 100%;
 			right: 80px;
 			z-index: 0;
-			background-image: url("/dist/img/assassin-desktop.jpg");
+			background-image: url("/dist/img/dvmc-desktop.png");
 			@media screen and (min-width: 768px) {
 				top: 30%;
 				right: 20%;
@@ -1016,7 +1016,7 @@ footer{
 			right: 20px;
 			width: 50%;
 			rotate: 5deg;
-			background-image: url("/dist/img/assassin-mobile.jpg");
+			background-image: url("/dist/img/dvmc-mobile.png");
 			@media screen and (min-width: 768px) {
 				width: 25%;
 				height: 500px;
